    - Removed prerequisite Advanced Oil Processing from technology Rubbers
    - Recipe Liquid Rubber > Rubber unlocked by technology Rubber only instead of also being unlocked by technology Rubbers
    - Moved Algae Farm 2 from Green Algae Processing to Blue Algae Processing
    - Moved Green Algae Processing earlier in the tech tree
    - Moved Water Treatment earlier in the tech tree
  Bugfixes:
    - Fixed missing icon "liquid-multi-phase-oil.png"
    - Removed coal and crushed coal
    - Moved recipes for Sulfur and Sulfur dioxide gas back to Sulfur processing 1
    - Added missing science packs to Logistics System 3, Logistics Warehouses, and Logistics Silos
    - Added Thermal Water Extraction as a prerequisite for Fish Pressing
    - Fixed lab icon on Sacrificial electromagnet technology (if Science Cost Tweaker is installed)
    - Steam Powered Inserter was unlocked from the start
    - Restored Farming 1 as a prerequisite for Arboretum 1
    - Added Wood Processing 2 as a prerequisite for Basic Chemistry
---------------------------------------------------------------------------------------------------
Version: 0.4.8
Date: 18. 8. 2020
  Changes:
    - Extra check for crash site disable remote call
---------------------------------------------------------------------------------------------------
Version: 0.4.7
Date: 18. 8. 2020
  Changes:
    - Disable factorio 1.0 crash landing freeplay start
    - Always enable kovarex enrichment tech
    - Redundant normal/expensive recipe handling
---------------------------------------------------------------------------------------------------
Version: 0.4.6
Date: 5. 7. 2020
  Changes:
    - Check autoplace controls are unused before removing
---------------------------------------------------------------------------------------------------
Version: 0.4.5
Date: 30. 5. 2020
  Changes:
    - Adjust blue algae tech requirements back down to green science
    - Add thermal water recipe for use with thermal bore